--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
+    "bootstrap": "^5.3.2",
     "classnames": "^2.3.2",
     "cra-template": "1.2.0",
     "react": "^18.2.0",
